improved README and sample run.sh script